# AI-Resume-Analyser

./: .gitignore  README.md  main.py  pyproject.toml  test.py
